# claude-research-private

./: README.md
agentic-learning-platform/: index.html
agentic-learning-platform/css/: styles.css
agentic-learning-platform/js/: main.js
eyeballs-method-tiktok/: BUILD-PLAN.md  README.md
eyeballs-method-tiktok/docs/: 01-introduction.md  02-content-engine.md  03-automation-distribution.md  04-funnel-architecture.md  05-scaling-playbook.md  06-advanced-strategies.md  07-tech-stack.md  08-metrics-analytics.md
eyeballs-method-tiktok/templates/: daily-tracker.md  poster-starter-kit.md  script-template.md
local-seo-strategy/: competitor-analysis.md  local-seo-checklist.md  location-page-template.md  page-generator.py  strategy-guide.md
research/polygon-unwrapping/: CLAUDE.md  README.md  algorithms.md  decision-flowchart.md  edge-weight-functions.md  optimization-techniques.md  pet-shapes-100-200-poly.md  practical-examples.md  pyproject.toml  quality-metrics.md
research/polygon-unwrapping/scripts/: README.md  __init__.py  demo.py  requirements.txt  visualize.py
research/polygon-unwrapping/scripts/algorithms/: __init__.py  greedy_region_growing.py  hierarchical_clustering.py  maximum_spanning_forest.py
research/polygon-unwrapping/scripts/examples/: __init__.py
research/polygon-unwrapping/scripts/utils/: __init__.py  dual_graph.py  edge_weights.py  mesh.py  optimization.py  quality_metrics.py  uv_flatten.py  uv_packer.py
research/polygon-unwrapping/web/backend/: __init__.py  server.py
research/polygon-unwrapping/web/frontend/: index.html
(+8 files in other folders)
