[project]
name = "polygon-unwrapping"
version = "0.1.0"
description = "Polygon unwrapping (UV unwrapping) with edge-maximized clustering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "scipy>=1.10.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "reportlab>=4.0.0",
    "svglib>=1.5.0",
]

[project.optional-dependencies]
interactive = [
    "plotly>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = []
